add a way to stop/start discord thread

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,8 @@ version: ${project.version}
 main: pw.biome.biomechatrelay.BiomeChatRelay
 api-version: 1.16
 depend: [BiomeChat]
+commands:
+  biomechatrelay:
+    description: commands
+    usage: /biomechatrelay
+    aliases: [bcr]
