add send to admin channel

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,3 +10,6 @@ discord-token: "asdojasbj13kj41ou2371381231i3jkns"
 
 # Server chat discord channel ID
 server-chat-channel-id: 123129483712397123
+
+# Server chat discord channel ID
+admin-chat-channel-id: 123129483712397123
