--- a/pom.xml
+++ b/pom.xml
@@ -111,5 +111,10 @@
             <artifactId>discord4j-core</artifactId>
             <version>3.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.54.Final</version>
+        </dependency>
     </dependencies>
 </project>
